PR 49636 Henning Petersen: use "0L" to return 0 from a function returning long, and test its returned value against "0L" instead of "0".

This is not especially necessary, but it's also harmless.